Fix alignment of contact info for signed-out roles

--- a/embc-app/ClientApp/src/app/components/top-navbar/top-navbar.component.scss
+++ b/embc-app/ClientApp/src/app/components/top-navbar/top-navbar.component.scss
@@ -9,9 +9,9 @@ $text-color: #fff;
 }
 
 .everyone-nav-bar {
+    width: 100%;
     display: flex;
     & div {
-        flex: 1 1 auto;
-        flex-direction: row-reverse;
+        margin-left: auto;
     }
 }
